## v0.20.0

### Added

- Disable enchantment glint on enchanted armor
- Add configuration options for adjusting crossbow charge speed and shot power


---

## v0.19.1

### Added

- Lang entries for new config values

---

## v0.19.0

### Added

- Added customization options for adjusting
    - Nostalgic Tweak's round robin lighting maximum deducted sky light level
    - True Darkness's minimum true darkness level
    - True Darkness's maximum true darkness level

---

## v0.18.0

### Added

- Added customization options for adjusting the brightness of the End and the night vision effect

---

## v0.17.0

### Added

- Added ability to fully customize nighttime brightness by moon phase in True Darkness Refabricated mod

---

## v0.16.0

### Changed

- Giants now despawn in daylight

---

## v0.15.0

### Changed

- baby hoglins can no longer spawn

---

## v0.14.0

contributed by PartoneTrain

### Changed

- updated ender dragon end gateway spawning code to create 4 gateways at once, in the north, west, south, and eastmost
  corners of the end island.

---

## v0.13.0

### Changed

- updated ocelot to cat conversion code to updated code from https://github.com/Partonetrain/trains_tweaks by Partonetrain

---

## v0.12.0

### Added

- add code from github.com/Partonetrain/ocelotfix to tame ocelot into cat
    - fix possible multiple cats bug
- add config options to set ocelot avoid distance and disable ocelot avoiding
    - change default ocelot avoid distance to 8 blocks instead of 16

---

## v0.11.0

### Added

- make it easier to tame ocelots
    - don't need to be in a tempted state to be tamed
    - 1/2 chance instead of 1/3

---

## v0.10.0

### Added

- remove end crystal and iron bars from all end spikes

---

## v0.9.0

### Added

- disable anvil damage

---

## v0.8.0
### Added

- mixin to https://modrinth.com/mod/giant-spawn mod
    - allow modifying giant attack range
- increase range of giant sounds

---

## v0.7.0
### Added
