@@ -22,6 +22,7 @@ collective_version=1.20.1-8.13-fabric+forge+neo
 true_darkness_refabricated_version=1.2.0
 owo_lib_version=0.11.2+1.20
 nostalgic_tweaks_version=2.0.0-beta.922
+archery_expansion_version=1.0.7.3
 
 # Dev Environment Only
 modmenu_version=7.2.2
