@@ -32,5 +32,6 @@
   "classic-reintegrated-tweaks.midnightconfig.scaleTrueDarknessGamma": "Scale True Darkness Gamma",
   "classic-reintegrated-tweaks.midnightconfig.crossbowShootingPower": "Crossbow Shooting Power",
   "classic-reintegrated-tweaks.midnightconfig.crossbowChargeDuration": "Crossbow Charge Duration",
-  "classic-reintegrated-tweaks.midnightconfig.crossbowArrowBaseDamage": "Crossbow Arrow Base Damage"
+  "classic-reintegrated-tweaks.midnightconfig.crossbowArrowBaseDamage": "Crossbow Arrow Base Damage",
+  "classic-reintegrated-tweaks.midnightconfig.disableArcheryExpansionArrowGui": "Disable Archery Expansion Arrow GUI"
 }
