@@ -2,3 +2,4 @@ accessWidener v1 named
 accessible class net/minecraft/world/entity/animal/Ocelot$OcelotTemptGoal
 accessible method net/minecraft/world/entity/animal/Ocelot isTrusting ()Z
 accessible method net/minecraft/world/level/dimension/end/EndDragonFight spawnNewGateway (Lnet/minecraft/core/BlockPos;)V
+accessible field org/infernalstudios/archeryexp/mixin/client/GuiMixin BOW_METER Lnet/minecraft/resources/ResourceLocation;
