@@ -3,6 +3,7 @@
   "package": "com.minhcraft.mixin",
   "compatibilityLevel": "JAVA_17",
   "mixins": [
+    "arrow_module.AbstractArrowMixin",
     "arrow_module.CrossbowItemMixin",
     "block.AnvilBlockMixin",
     "block.CakeBlockMixin",
@@ -32,6 +33,7 @@
     "defaultRequire": 1
   },
   "client": [
+    "archery_exp_compat.GuiMixinSquared",
     "client.ClientRecipeBookMixin",
     "client.GameRendererMixin",
     "client.LightTextureMixin",
